# Proyect_CG

ARProject/: CMakeLists.txt  main.cpp
Delaunay/: Main.cpp
Delaunay/Header/: Triangulation.h
Delaunay/Source/: DelaunayTriangulation.cpp  DotCloudGenerator.cpp  Vector3D.cpp
Header/: DataStructure.h
Resource/: random_out.txt
Source/: DotCloudReader.cpp  Triangle.cpp
src/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  main.cpp
